Prevent Balances panel width jumping

--- a/src/balances-mt/mtBalancesView.scss
+++ b/src/balances-mt/mtBalancesView.scss
@@ -1,6 +1,10 @@
 @import "../utils/Variables";
 @import "../utils/forms/Buttons.mixins";
 
+.balancesPanel {
+  width: 100%;
+}
+
 .table {
   th {
     text-transform: unset;
